<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crazyflie_mpc</name>
  <version>0.0.0</version>
  <description>Control package for Crazyflie drones using MPC</description>
  <maintainer email="christian.llanes@gatech.edu">Christian Llanes</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>crazyflie_py</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>crazyflie_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>motion_capture_tracking_interfaces</depend>

  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>pyhton3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-open3d</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
